--- a/image.yaml
+++ b/image.yaml
@@ -19,4 +19,8 @@ scripts:
       exec: add_jboss_user.sh
 workdir: "/home/jboss"
 dogen:
-    version: 2.0.0
+    version: 2.1.0
+    plugins:
+        dist_git:
+            repo: jboss-base-docker
+            branch: jb-rhel7-1.0
