--- a/image.yaml
+++ b/image.yaml
@@ -1,6 +1,6 @@
 name: "jboss/base-rhel7"
 version: "1.1"
-from: "rhel7:7.3-released"
+from: "rhel7:7.4-81"
 description: "Base image for all other Middleware container images which provides common set of tools, jboss user and home directory"
 user: 185
 maintainer: "Cloud Enablement Feedback <cloud-enablement-feedback@redhat.com>"
