--- a/image.yaml
+++ b/image.yaml
@@ -2,7 +2,7 @@ schema_version: 1
 
 name: "jboss/base-rhel7"
 version: "1.0"
-from: "rhel7:7.4-released"
+from: "rhel7:7.4-114"
 description: "Base image for all other Middleware container images which provides common set of tools, jboss user and home directory"
 labels:
     - name: maintainer
