Specify modules explicitly

--- a/image.yaml
+++ b/image.yaml
@@ -11,6 +11,8 @@ envs:
     - name: "HOME"
       value: "/home/jboss"
 modules:
+      repositories:
+           - path: modules
       install:
           - name: common
 packages:
