--- a/image.yaml
+++ b/image.yaml
@@ -29,4 +29,4 @@ run:
 osbs:
       repository:
             name: jboss-base-docker
-            branch: jb-rhel7-1.2
+            branch: jb-rhel-7
