CLOUD-2293 add support for building a community based image
Signed-off-by: rcernich <rcernich@redhat.com>

--- a/image.yaml
+++ b/image.yaml
@@ -12,12 +12,14 @@ envs:
       value: "/home/jboss"
 modules:
       repositories:
-           - path: modules
+           - name: common
+             path: modules/common
+           - name: release
+             path: modules/release/product
       install:
           - name: common
+          - name: os
 packages:
-      repositories:
-          - jboss-os
       install:
           - yum-utils
           - unzip
